tests/ui/lifetimes/hidden-lifetimes-in-mod.stderr
error: paths containing hidden lifetime parameters are deprecated
  --> $DIR/hidden-lifetimes-in-mod.rs:7:17
   |
LL |     fn test2(_: super::Foo) {}
   |                 ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/hidden-lifetimes-in-mod.rs:5:8
   |
LL | #[deny(hidden_lifetimes_in_paths)]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(hidden_lifetimes_in_input_paths)]` implied by `#[deny(hidden_lifetimes_in_paths)]`
help: indicate the anonymous lifetime
   |
LL |     fn test2(_: super::Foo<'_>) {}
   |                           ++++

error: aborting due to 1 previous error

